update jura static page

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/en/about.html.twig
@@ -57,10 +57,9 @@
 
         <h2 class="underline"><span>Who</span></h2>
 
-        <p>The Gospel Center Lausanne is a member of the <a target="_blank"
-                                                            href="http://www.evangelique.ch">Réseau évangélique
-                suisse</a> (Swiss evangelical network), of the <a target="_blank" href="http://www.lafree.ch">Fédération
-                romande des Églises évangéliques</a> (the swiss federation of French-speaking evangelical churches) and
+        <p>The Gospel Center Jura is a member of the <a target="_blank"
+                                                        href="http://www.evangelique.ch">Réseau évangélique
+                suisse</a> (Swiss evangelical network) and
             is linked to the <a
                     target="_blank"
                     href="http://www.gospel-wave.org">Gospel Wave movement.</a></p>
@@ -99,7 +98,7 @@
 
         <h2 class="underline"><span>Finances</span></h2>
 
-        <p>The Gospel Center Lausanne receives no government support and is a non-profit organization. All the running
+        <p>The Gospel Center Jura receives no government support and is a non-profit organization. All the running
             costs are being covered by the free commitment of everyone. Our accounts are approved by the General
             Assembly after having been checked by a trustee.</p>
 
@@ -111,33 +110,22 @@
 
             <article class="people">
                 <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
-                     alt="Marc Gallay"/>
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/jura/DavidClaudiaSchmied.jpg') }}"
+                     alt="David & Claudia Schmied"/>
                 <section>
-                    <h1>Marc & Christine Gallay</h1>
+                    <h1>David & Claudia Schmied</h1>
 
-                    <p>Pastoral couple of Gospel Center Lausanne</p>
+                    <p>Pastoral couple of Gospel Center Jura</p>
                 </section>
 
             </article>
 
             <article class="people">
                 <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
-                     alt="Jean-Philippe Bärtschi"/>
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/jura/PaulTrachsel.jpg') }}"
+                     alt="Paul Trachsel"/>
                 <section>
-                    <h1>Jean-Philippe Bärtschi</h1>
-
-                    <p>Pastor trainee</p>
-                </section>
-            </article>
-
-            <article class="people">
-                <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
-                     alt="Patrick Bigler"/>
-                <section>
-                    <h1>Patrick Bigler</h1>
+                    <h1>Paul Trachsel</h1>
 
                     <p>Member of leadership team</p>
                 </section>
@@ -145,10 +133,10 @@
 
             <article class="people">
                 <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/AlixBingle.jpg') }}"
-                     alt="Alix Bingle"/>
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/jura/JeanClaudeBerberat.jpg') }}"
+                     alt="Jean-Claude Berberat"/>
                 <section>
-                    <h1>Alix Bingle</h1>
+                    <h1>Jean-Claude Berberat</h1>
 
                     <p>Member of leadership team</p>
                 </section>
@@ -156,112 +144,122 @@
 
             <article class="people">
                 <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcRapelli.jpg') }}"
-                     alt="Marc Rapelli"/>
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/jura/CedricTrachsel.jpg') }}"
+                     alt="Cédric Trachsel"/>
                 <section>
-                    <h1>Marc Rapelli</h1>
+                    <h1>Cédric Trachsel</h1>
 
                     <p>Member of leadership team</p>
                 </section>
             </article>
 
-            <article class="people">
-                <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/TimotheeRochat.jpg') }}"
-                     alt="Timothée Rochat"/>
-                <section>
-                    <h1>Timothée Rochat</h1>
-
-                    <p>Member of leadership team</p>
-                </section>
-            </article>
         {% endspaceless %}
 
     </article>
 
     <article class="tab default" id="staff">
 
-        <h2 class="slogan">The staff of the Gospel Center Lausanne is a dynamic team that puts effort towards quality
+        <h2 class="slogan">The staff of the Gospel Center Jura is a dynamic team that puts effort towards quality
             work.</h2>
 
         <article class="frame">
-            <h1>Pastoral Team</h1>
+            <h1>équipe pastorale</h1>
 
-            <p>Marc Gallay</p>
+            <p>David Schmied</p>
 
-            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
+            <a href="mailto:info@gc-jura.org">info@gc-jura.org</a>
         </article>
 
         <article class="frame">
-            <h1>Children and Youth</h1>
+            <h1>Secrétariat</h1>
 
-            <p>Fiona Bland</p>
+            <p>Nathalie Buchwalder</p>
 
-            <a href="mailto:gospelkids@gc-lausanne.org">gospelkids@gc-lausanne.org</a>
+            <a href="mailto:secretariat@gc-jura.org">secretariat@gc-jura.org</a>
         </article>
 
         <article class="frame">
-            <h1>Music</h1>
+            <h1>Accueil</h1>
 
-            <p>Gaël Dufour</p>
-
-            <a href="mailto:worship@gc-lausanne.org">worship@gc-lausanne.org</a>
+            <p>Gwenaëlle Beutler</p>
         </article>
 
         <article class="frame">
-            <h1>Bases</h1>
+            <h1>Bar</h1>
 
-            <p>Chantal Cioffi</p>
-
-            <a href="mailto:bases@gc-lausanne.org">bases@gc-lausanne.org</a>
+            <p>Denis Voirol</p>
         </article>
 
         <article class="frame">
-            <h1>Technic</h1>
+            <h1>Bible School</h1>
 
-            <p>David van der Maas</p>
-
-            <a href="mailto:technique@gc-lausanne.org">technique@gc-lausanne.org</a>
+            <p>David Schmied</p>
         </article>
 
         <article class="frame">
-            <h1>Multimedia</h1>
+            <h1>Centre d’écoute et guérison</h1>
 
-            <p>Yoann Gern</p>
-
-            <a href="mailto:multimedia@gc-lausanne.org">multimedia@gc-lausanne.org</a>
+            <p>Pascal Gagnebin</p>
         </article>
 
         <article class="frame">
-            <h1>Welcome</h1>
+            <h1>Déco</h1>
 
-            <p>Vincent Spycher</p>
-
-            <a href="mailto:welcome@gc-lausanne.org">welcome@gc-lausanne.org</a>
+            <p>Marie-France Trachsel</p>
         </article>
 
         <article class="frame">
-            <h1>Prayer team</h1>
+            <h1>Evangélisation</h1>
 
-            <p>Nathalie Pecorini</p>
-
-            <a href="mailto:equipiersdepriere@gc-lausanne.org">equipiersdepriere@gc-lausanne.org</a>
+            <p>David Schmied</p>
         </article>
 
         <article class="frame">
-            <h1>New christians</h1>
+            <h1>Garderie</h1>
 
-            <p>David Klopfenstein</p>
-
-            <a href="mailto:newchristians@gc-lausanne.org">newchristians@gc-lausanne.org</a>
+            <p>Stéphanie Dubois</p>
         </article>
 
         <article class="frame">
-            <h1>Coordination Gospel Center Lausanne</h1>
+            <h1>Gospel Kids</h1>
 
-            <p>Hélène Dufour</p>
+            <p>Cosette Berberat</p>
+        </article>
 
-            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
+        <article class="frame">
+            <h1>Gospel Teens</h1>
+
+            <p>Nathalie Buchwalder</p>
+        </article>
+
+        <article class="frame">
+            <h1>Gospel Youth</h1>
+
+            <p>Ryan Landolt</p>
+        </article>
+
+        <article class="frame">
+            <h1>Les bases</h1>
+
+            <p>David Schmied</p>
+        </article>
+
+        <article class="frame">
+            <h1>Librairie</h1>
+
+            <p>André Werth</p>
+        </article>
+
+        <article class="frame">
+            <h1>Louange</h1>
+
+            <p>Claudia Schmied</p>
+        </article>
+
+        <article class="frame">
+            <h1>Technique</h1>
+
+            <p>Cédric Trachsel</p>
         </article>
 
     </article>
