--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/en/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/en/youth.html.twig
@@ -25,17 +25,10 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#full-pack">
-                        <h1>Full Pack</h1>
-
-                        <h2>0-12 years old</h2>
-                    </a>
-                </li>
-                <li>
                     <a href="#youth">
                         <h1>Gospel Youth</h1>
 
-                        <h2>13-20 years old</h2>
+                        <h2>14-25 years old</h2>
                     </a>
                 </li>
             </ul>
@@ -59,17 +52,15 @@
              data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
 
-        <h2 class="underline"><span>Minicell'</span></h2>
-
-        <p>Faith-awakening programme for toddlers given by motivated leaders! Every Sunday, after worship, one of the
-            parent accompany the child to this group and stay for roughly 15mn to experience this time together. A fun
-            and friendly time meant to encourage toddlers to enter gently into a relationship with God! May it be
-            through songs, visual and tactile discoveries, this Minicell’ programme is a unique place not to miss!</p>
+        <h3>The English version will come soon.</h3>
 
         <h2 class="underline"><span>Garderie</span></h2>
 
-        <p>The childcare group takes over after the minicell’ activity. Games, stories, snack… simply everything to
-            delight the eyes and hearts of these little-ones!</p>
+        <p>Chaque dimanche après la louange, les enfants peuvent rejoindre la garderie où ils seront accueillis par une
+            monitrice motivée pour un moment d’éveil à la foi ludique et chaleureux qui encourage ces juniors à entrer
+            dans une relation tout en douceur avec Dieu.</p>
+
+        <p>Des petites chansons, des histoires, des jeux…tout pour ravir les yeux et le cœur de ces tout-petits !</p>
 
 
     </article>
@@ -122,37 +113,6 @@
             présence et la puissance de Dieu, vivre des moments de défis, connaître l’amour de Dieu et développer de
             nouvelles amitiés sont des points clés pour cette équipe.</p>
 
-        <p>Tout nouveau tout chaud, les teens c’est aussi « Out of the Box ». Un concept innovant qui a lieu une fois
-            par mois. Out of the Box, c’est sortir de sa boîte et de sa zone de confort avec un orateur du Gospel Center
-            qui vient partager son cœur et challenger cette jeune génération.</p>
-
-    </article>
-
-    <article class="tab blog-style" id="full-pack">
-
-        <h1>Full Pack</h1>
-
-        {% set customImg = 'bundles/gospelcenterpage/images/full-pack_2.jpg' %}
-
-        <img class="big"
-             src="{{ asset(customImg)| imagine_filter('blog_big_low') }}"
-             srcset="{{ asset(customImg)| imagine_filter('blog_big_low') }} 2x"
-             data-img="{{ asset(customImg)| imagine_filter('blog_big') }}"
-             data-img_2x="{{ asset(customImg)| imagine_filter('blog_big_2x') }}"
-             data-img_tablet="{{ asset(customImg)| imagine_filter('blog_big_tablet') }}"
-             data-img_tablet_2x="{{ asset(customImg)| imagine_filter('blog_big_tablet_2x') }}"
-             data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
-             data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
-
-        <h2 class="underline"><span>A complete celebration</span></h2>
-
-        <p>PRAISE, SKETCH, ANIMATION, SNACK and many more surprises!</p>
-
-        <p>A team of motivated youths are working hard to prepare a crazy programme that will motivate your children and
-            will help them start the week well!</p>
-
-        <p>Every last Sunday of the month at 6pm (with exceptions).</p>
-
     </article>
 
 
@@ -174,9 +134,9 @@
 
         <h3>The English version will come soon.</h3>
 
-        <p>Reste connecté sur facebook et branché à ton whats’app pour être informé des soirées et events du Gospel
-            Youth ! Dès 13 ans, vendredi ou samedi, de 19h30 à 21h30, à Provence 4, au bowling ou au McDo, le Gospel
-            Youth fait peau neuve et n’attend plus que toi !</p>
+        <p>Reste connecté sur Facebook ou branché à ton whats’app pour être informé des soirées et Events du Gospel
+            Youth ! Dès 14 ans, le samedi de 20h00 à 21h30, au Gospel, au bowling ou au MacDo, le Gospel Youth n’attend
+            plus que toi !</p>
 
         <p>Du fun, des moments de partages, des délires, la présence de Dieu et de la bonne louange seront au menu de
             ces folles soirées ! Notre rêve est de faire la différence dans ce monde en suivant l’exemple de Jésus,
@@ -187,7 +147,7 @@
 
             <p>sur notre page facebook</p>
 
-            <p><a href="https://facebook.com/gylausanne" target="_blank">facebook.com/GYLausanne</a></p>
+            <p><a href="https://www.facebook.com/pages/Gospel-Youth-Jura/590178811002457" target="_blank">facebook.com/GYJura</a></p>
         </article>
 
     </article>
