--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/about.html.twig
@@ -57,10 +57,9 @@
 
         <h2 class="underline"><span>Qui</span></h2>
 
-        <p>Le Gospel Center Lausanne est membre du Réseau évangélique suisse (<a target="_blank"
-                                                                                 href="http://www.evangelique.ch">RES</a>),
-            de la Fédération romande des Églises évangéliques
-            évangéliques (<a target="_blank" href="http://www.lafree.ch">FREE</a>) et dépend du mouvement <a
+        <p>Le Gospel Center Jura est membre du Réseau évangélique suisse (<a target="_blank"
+                                                                             href="http://www.evangelique.ch">RES</a>)
+            et dépend du mouvement <a
                     target="_blank"
                     href="http://www.gospel-wave.org">Gospel
                 Wave.</a></p>
@@ -110,10 +109,9 @@
 
         <h2 class="underline"><span>Finances</span></h2>
 
-        <p>Le Gospel Center Lausanne ne bénéficie d’aucun soutien de l’État. C’est une association à but non lucratif.
+        <p>Le Gospel Center Jura ne bénéficie d’aucun soutien de l’État. C’est une association à but non lucratif.
             L’ensemble des frais de fonctionnement est assumé par l’engagement libre de chacun. Nos comptes sont
-            approuvés
-            par l’Assemblée générale après vérification par une fiduciaire.</p>
+            approuvés par l’Assemblée générale après vérification par une fiduciaire.</p>
 
     </article>
 
@@ -124,33 +122,22 @@
 
             <article class="people">
                 <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
-                     alt="Marc Gallay"/>
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/jura/DavidClaudiaSchmied.jpg') }}"
+                     alt="David et Claudia Schmied"/>
                 <section>
-                    <h1>Marc et Christine Gallay</h1>
+                    <h1>David et Claudia Schmied</h1>
 
-                    <p>Couple pastoral du Gospel Center Lausanne</p>
+                    <p>Couple pastoral du Gospel Center Jura</p>
                 </section>
 
             </article>
 
             <article class="people">
                 <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
-                     alt="Jean-Philippe Bärtschi"/>
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/jura/PaulTrachsel.jpg') }}"
+                     alt="Paul Trachsel"/>
                 <section>
-                    <h1>Jean-Philippe Bärtschi</h1>
-
-                    <p>Pasteur stagiaire</p>
-                </section>
-            </article>
-
-            <article class="people">
-                <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
-                     alt="Patrick Bigler"/>
-                <section>
-                    <h1>Patrick Bigler</h1>
+                    <h1>Paul Trachsel</h1>
 
                     <p>Membre du conseil de direction</p>
                 </section>
@@ -158,10 +145,10 @@
 
             <article class="people">
                 <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/AlixBingle.jpg') }}"
-                     alt="Alix Bingle"/>
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/jura/JeanClaudeBerberat.jpg') }}"
+                     alt="Jean-Claude Berberat"/>
                 <section>
-                    <h1>Alix Bingle</h1>
+                    <h1>Jean-Claude Berberat</h1>
 
                     <p>Membre du conseil de direction</p>
                 </section>
@@ -169,21 +156,10 @@
 
             <article class="people">
                 <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcRapelli.jpg') }}"
-                     alt="Marc Rapelli"/>
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/jura/CedricTrachsel.jpg') }}"
+                     alt="Cédric Trachsel"/>
                 <section>
-                    <h1>Marc Rapelli</h1>
-
-                    <p>Membre du conseil de direction</p>
-                </section>
-            </article>
-
-            <article class="people">
-                <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/TimotheeRochat.jpg') }}"
-                     alt="Timothée Rochat"/>
-                <section>
-                    <h1>Timothée Rochat</h1>
+                    <h1>Cédric Trachsel</h1>
 
                     <p>Membre du conseil de direction</p>
                 </section>
@@ -194,89 +170,108 @@
 
     <article class="tab default" id="staff">
 
-        <h2 class="slogan">Le staff du Gospel Center Lausanne est une équipe
+        <h2 class="slogan">Le staff du Gospel Center Jura est une équipe
             dynamique qui désire effectuer un travail de qualité.</h2>
 
         <article class="frame">
             <h1>équipe pastorale</h1>
 
-            <p>Marc Gallay</p>
+            <p>David Schmied</p>
 
-            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
+            <a href="mailto:info@gc-jura.org">info@gc-jura.org</a>
         </article>
 
         <article class="frame">
-            <h1>Enfance et Jeunesse</h1>
+            <h1>Secrétariat</h1>
 
-            <p>Fiona Bland</p>
+            <p>Nathalie Buchwalder</p>
 
-            <a href="mailto:gospelkids@gc-lausanne.org">gospelkids@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Musique</h1>
-
-            <p>Gaël Dufour</p>
-
-            <a href="mailto:worship@gc-lausanne.org">worship@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Les Bases</h1>
-
-            <p>Chantal Cioffi</p>
-
-            <a href="mailto:bases@gc-lausanne.org">bases@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Technique</h1>
-
-            <p>David van der Maas</p>
-
-            <a href="mailto:technique@gc-lausanne.org">technique@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Multimédia</h1>
-
-            <p>Yoann Gern</p>
-
-            <a href="mailto:multimedia@gc-lausanne.org">multimedia@gc-lausanne.org</a>
+            <a href="mailto:secretariat@gc-jura.org">secretariat@gc-jura.org</a>
         </article>
 
         <article class="frame">
             <h1>Accueil</h1>
 
-            <p>Vincent Spycher</p>
-
-            <a href="mailto:welcome@gc-lausanne.org">welcome@gc-lausanne.org</a>
+            <p>Gwenaëlle Beutler</p>
         </article>
 
         <article class="frame">
-            <h1>équipiers de prière</h1>
+            <h1>Bar</h1>
 
-            <p>Nathalie Pecorini</p>
-
-            <a href="mailto:equipiersdepriere@gc-lausanne.org">equipiersdepriere@gc-lausanne.org</a>
+            <p>Denis Voirol</p>
         </article>
 
         <article class="frame">
-            <h1>New christians</h1>
+            <h1>Bible School</h1>
 
-            <p>David Klopfenstein</p>
-
-            <a href="mailto:newchristians@gc-lausanne.org">newchristians@gc-lausanne.org</a>
+            <p>David Schmied</p>
         </article>
 
         <article class="frame">
-            <h1>Coordination Gospel Center Lausanne</h1>
+            <h1>Centre d’écoute et guérison</h1>
 
-            <p>Hélène Dufour</p>
-
-            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
+            <p>Pascal Gagnebin</p>
         </article>
 
+        <article class="frame">
+            <h1>Déco</h1>
+
+            <p>Marie-France Trachsel</p>
+        </article>
+
+        <article class="frame">
+            <h1>Evangélisation</h1>
+
+            <p>David Schmied</p>
+        </article>
+
+        <article class="frame">
+            <h1>Garderie</h1>
+
+            <p>Stéphanie Dubois</p>
+        </article>
+
+        <article class="frame">
+            <h1>Gospel Kids</h1>
+
+            <p>Cosette Berberat</p>
+        </article>
+
+        <article class="frame">
+            <h1>Gospel Teens</h1>
+
+            <p>Nathalie Buchwalder</p>
+        </article>
+
+        <article class="frame">
+            <h1>Gospel Youth</h1>
+
+            <p>Ryan Landolt</p>
+        </article>
+
+        <article class="frame">
+            <h1>Les bases</h1>
+
+            <p>David Schmied</p>
+        </article>
+
+        <article class="frame">
+            <h1>Librairie</h1>
+
+            <p>André Werth</p>
+        </article>
+
+        <article class="frame">
+            <h1>Louange</h1>
+
+            <p>Claudia Schmied</p>
+        </article>
+
+        <article class="frame">
+            <h1>Technique</h1>
+
+            <p>Cédric Trachsel</p>
+        </article>
     </article>
 
 
