--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/give.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/give.html.twig
@@ -1,7 +1,7 @@
 {% block body %}
 
     <h1 class="titlePage"><span>{{ 'gc.title.give'|trans }}</span></h1>
-    <h2 class="slogan">Le Gospel Center Lausanne est une association à but non lucratif, qui ne reçoit aucun soutien
+    <h2 class="slogan">Le Gospel Center Jura est une association à but non lucratif, qui ne reçoit aucun soutien
         financier de l’État.</h2>
 
     <article class="tab blog-style">
@@ -53,26 +53,16 @@
         <article class="frame">
             <h1>Nous soutenir</h1>
 
-            <p>CCP: 17-637864-2</p>
+            <p>CHF: 25-12975-2</p>
 
-            <p>IBAN: CH70 0900 0000 1763 7864 2</p>
+            <p>IBAN: CH60 8000 4000 0032 3498 6</p>
 
-            <p>Gospel Center Lausanne</p>
+            <p>Gospel Center Jura</p>
 
-            <p>1007 Lausanne</p>
+            <p>2800 Delémont</p>
 
             <p>Suisse.</p>
         </article>
-
-        <h2 class="underline"><span>Nos projets</span></h2>
-
-        <h3>Bâtiment</h3>
-
-        <p>Nous désirons faire l’acquisition d’un bâtiment nous permettant de nous développer.</p>
-
-        <p>Un compte bâtiment est ouvert pour toutes les personnes qui souhaitent voir dans un futur proche le Gospel
-            Center dans de nouveaux locaux. Nous encourageons toutes les personnes à faire un don pour voir ce projet se
-            réaliser. CCP 10-186944-9 BV disponible au stand accueil.</p>
 
     </article>
 {% endblock %}
