--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/en/give.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/en/give.html.twig
@@ -1,7 +1,7 @@
 {% block body %}
 
     <h1 class="titlePage"><span>{{ 'gc.title.give'|trans }}</span></h1>
-    <h2 class="slogan">Gospel Center Lausanne is a non-profit association, that receives no financial support from the
+    <h2 class="slogan">Gospel Center Jura is a non-profit association, that receives no financial support from the
         State.</h2>
 
     <article class="tab blog-style">
@@ -50,26 +50,16 @@
         <article class="frame">
             <h1>Support us</h1>
 
-            <p>CCP: 17-637864-2</p>
+            <p>CHF: 25-12975-2</p>
 
-            <p>IBAN: CH70 0900 0000 1763 7864 2</p>
+            <p>IBAN: CH60 8000 4000 0032 3498 6</p>
 
-            <p>Gospel Center Lausanne</p>
+            <p>Gospel Center Jura</p>
 
-            <p>1007 Lausanne</p>
+            <p>2800 Delémont</p>
 
-            <p>Switzerland.</p>
+            <p>Suisse.</p>
         </article>
-
-        <h2 class="underline"><span>Our projects</span></h2>
-
-        <h3>Building</h3>
-
-        <p>We would like to make the acquisition of a building that will allow us to grow.</p>
-
-        <p>A building dedicated account is open to all of those who want to see in a near future the Gospel Center in a
-            new venue. We encourage everyone to make a donation to see this project happen. CCP 10-186944-9. Payment
-            slips are available at the welcome table, during the celebrations. </p>
 
     </article>
 {% endblock %}
