--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/youth.html.twig
@@ -25,17 +25,10 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#full-pack">
-                        <h1>Full Pack</h1>
-
-                        <h2>0-12 ans</h2>
-                    </a>
-                </li>
-                <li>
                     <a href="#youth">
                         <h1>Gospel Youth</h1>
 
-                        <h2>13-20 ans</h2>
+                        <h2>14-25 ans</h2>
                     </a>
                 </li>
             </ul>
@@ -58,20 +51,13 @@
              data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
              data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-
-        <h2 class="underline"><span>Minicell'</span></h2>
-
-        <p>Programme d’éveil à la foi pour les tout-petits donné par une équipe d’animatrices motivées ! Chaque
-            dimanche, après la louange, un des parents accompagne son enfant dans le groupe et reste environ 15 minutes
-            pour vivre ce temps avec lui. Un moment ludique, chaleureux, qui encourage ces juniors à entrer dans une
-            relation tout en douceur avec Dieu ! Que ce soit au travers de petites chansons, de découvertes visuelles et
-            tactiles, le programme Minicell’ est un rendez-vous privilégié à ne pas manquer !</p>
-
         <h2 class="underline"><span>Garderie</span></h2>
 
-        <p>La garderie prend le relais à la suite de l’activité Minicell !</p>
+        <p>Chaque dimanche après la louange, les enfants peuvent rejoindre la garderie où ils seront accueillis par une
+            monitrice motivée pour un moment d’éveil à la foi ludique et chaleureux qui encourage ces juniors à entrer
+            dans une relation tout en douceur avec Dieu.</p>
 
-        <p>Des jeux, des histoires, une collation … tout pour ravir les yeux et le cœur de ces tout-petits !</p>
+        <p>Des petites chansons, des histoires, des jeux… tout pour ravir les yeux et le cœur de ces tout-petits !</p>
 
 
     </article>
@@ -123,39 +109,7 @@
             présence et la puissance de Dieu, vivre des moments de défis, connaître l’amour de Dieu et développer de
             nouvelles amitiés sont des points clés pour cette équipe.</p>
 
-        <p>Tout nouveau tout chaud, les teens c’est aussi « Out of the Box ». Un concept innovant qui a lieu une fois
-            par mois. Out of the Box, c’est sortir de sa boîte et de sa zone de confort avec un orateur du Gospel Center
-            qui vient partager son cœur et challenger cette jeune génération.</p>
-
     </article>
-
-    <article class="tab blog-style" id="full-pack">
-
-        <h1>Full Pack</h1>
-
-        {% set customImg = 'bundles/gospelcenterpage/images/full-pack_2.jpg' %}
-
-        <img class="big"
-             src="{{ asset(customImg)| imagine_filter('blog_big_low') }}"
-             srcset="{{ asset(customImg)| imagine_filter('blog_big_low') }} 2x"
-             data-img="{{ asset(customImg)| imagine_filter('blog_big') }}"
-             data-img_2x="{{ asset(customImg)| imagine_filter('blog_big_2x') }}"
-             data-img_tablet="{{ asset(customImg)| imagine_filter('blog_big_tablet') }}"
-             data-img_tablet_2x="{{ asset(customImg)| imagine_filter('blog_big_tablet_2x') }}"
-             data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
-             data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
-
-        <h2 class="underline"><span>Une célébration de A à Z</span></h2>
-
-        <p>LOUANGE, SKETCH, ANIMATION, COLLATION et pleins d'autres surprises encore !</p>
-
-        <p>Une équipe de jeunes motivés est à l’œuvre pour concocter un programme délirant qui motivera vos enfants et
-            les aidera à bien commencer la semaine!</p>
-
-        <p>Chaque dernier dimanche du mois à 18h00 (sauf exceptions).</p>
-
-    </article>
-
 
     <article class="tab blog-style" id="youth">
 
@@ -173,9 +127,9 @@
              data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
              data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-        <p>Reste connecté sur facebook et branché à ton whats’app pour être informé des soirées et events du Gospel
-            Youth ! Dès 13 ans, vendredi ou samedi, de 19h30 à 21h30, à Provence 4, au bowling ou au McDo, le Gospel
-            Youth fait peau neuve et n’attend plus que toi !</p>
+        <p>Reste connecté sur Facebook ou branché à ton whats’app pour être informé des soirées et Events du Gospel
+            Youth ! Dès 14 ans, le samedi de 20h00 à 21h30, au Gospel, au bowling ou au MacDo, le Gospel Youth n’attend
+            plus que toi ! </p>
 
         <p>Du fun, des moments de partages, des délires, la présence de Dieu et de la bonne louange seront au menu de
             ces folles soirées ! Notre rêve est de faire la différence dans ce monde en suivant l’exemple de Jésus,
@@ -186,7 +140,8 @@
 
             <p>sur notre page facebook</p>
 
-            <p><a href="https://facebook.com/gylausanne" target="_blank">facebook.com/GYLausanne</a></p>
+            <p><a href="https://www.facebook.com/pages/Gospel-Youth-Jura/590178811002457" target="_blank">facebook.com/GYJura</a>
+            </p>
         </article>
 
     </article>
